@@ -1,5 +1,7 @@
 v0.2.1 (2021-09-12)
 - providers(soccerstreamlinks_soccer): added league name to labels
+- sources: add liveonscore.to
+
 v0.2.0 (2021-09-11)
 - providers: add soccerstreamlinks.com (soccer)
 
